src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_TextElementConfig"][::std::mem::size_of::<Clay_TextElementConfig>() - 28usize];
    ["Alignment of Clay_TextElementConfig"]
        [::std::mem::align_of::<Clay_TextElementConfig>() - 4usize];
    ["Offset of field: Clay_TextElementConfig::textColor"]
        [::std::mem::offset_of!(Clay_TextElementConfig, textColor) - 0usize];
    ["Offset of field: Clay_TextElementConfig::fontId"]
        [::std::mem::offset_of!(Clay_TextElementConfig, fontId) - 16usize];
    ["Offset of field: Clay_TextElementConfig::fontSize"]
        [::std::mem::offset_of!(Clay_TextElementConfig, fontSize) - 18usize];
    ["Offset of field: Clay_TextElementConfig::letterSpacing"]
        [::std::mem::offset_of!(Clay_TextElementConfig, letterSpacing) - 20usize];
    ["Offset of field: Clay_TextElementConfig::lineHeight"]
        [::std::mem::offset_of!(Clay_TextElementConfig, lineHeight) - 22usize];
    ["Offset of field: Clay_TextElementConfig::wrapMode"]
        [::std::mem::offset_of!(Clay_TextElementConfig, wrapMode) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ImageElementConfig {
    pub imageData: *mut ::std::os::raw::c_void,
    pub sourceDimensions: Clay_Dimensions,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ImageElementConfig"][::std::mem::size_of::<Clay_ImageElementConfig>() - 16usize];
    ["Alignment of Clay_ImageElementConfig"]
        [::std::mem::align_of::<Clay_ImageElementConfig>() - 8usize];
    ["Offset of field: Clay_ImageElementConfig::imageData"]
        [::std::mem::offset_of!(Clay_ImageElementConfig, imageData) - 0usize];
    ["Offset of field: Clay_ImageElementConfig::sourceDimensions"]
        [::std::mem::offset_of!(Clay_ImageElementConfig, sourceDimensions) - 8usize];
};
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_TOP: Clay_FloatingAttachPointType = 0;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_CENTER: Clay_FloatingAttachPointType =
    1;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_BOTTOM: Clay_FloatingAttachPointType =
    2;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_TOP: Clay_FloatingAttachPointType =
    3;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_CENTER:
    Clay_FloatingAttachPointType = 4;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_BOTTOM:
    Clay_FloatingAttachPointType = 5;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_TOP: Clay_FloatingAttachPointType =
    6;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_CENTER:
    Clay_FloatingAttachPointType = 7;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_BOTTOM:
    Clay_FloatingAttachPointType = 8;
pub type Clay_FloatingAttachPointType = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingAttachPoints {
    pub element: Clay_FloatingAttachPointType,
    pub parent: Clay_FloatingAttachPointType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_FloatingAttachPoints"]
        [::std::mem::size_of::<Clay_FloatingAttachPoints>() - 2usize];
    ["Alignment of Clay_FloatingAttachPoints"]
        [::std::mem::align_of::<Clay_FloatingAttachPoints>() - 1usize];
    ["Offset of field: Clay_FloatingAttachPoints::element"]
        [::std::mem::offset_of!(Clay_FloatingAttachPoints, element) - 0usize];
    ["Offset of field: Clay_FloatingAttachPoints::parent"]
        [::std::mem::offset_of!(Clay_FloatingAttachPoints, parent) - 1usize];
};
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_CAPTURE: Clay_PointerCaptureMode = 0;
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH: Clay_PointerCaptureMode =
    1;
pub type Clay_PointerCaptureMode = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingElementConfig {
    pub offset: Clay_Vector2,
    pub expand: Clay_Dimensions,
    pub zIndex: u16,
    pub parentId: u32,
    pub attachment: Clay_FloatingAttachPoints,
    pub pointerCaptureMode: Clay_PointerCaptureMode,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_FloatingElementConfig"]
        [::std::mem::size_of::<Clay_FloatingElementConfig>() - 32usize];
    ["Alignment of Clay_FloatingElementConfig"]
        [::std::mem::align_of::<Clay_FloatingElementConfig>() - 4usize];
    ["Offset of field: Clay_FloatingElementConfig::offset"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, offset) - 0usize];
    ["Offset of field: Clay_FloatingElementConfig::expand"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, expand) - 8usize];
    ["Offset of field: Clay_FloatingElementConfig::zIndex"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, zIndex) - 16usize];
    ["Offset of field: Clay_FloatingElementConfig::parentId"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, parentId) - 20usize];
    ["Offset of field: Clay_FloatingElementConfig::attachment"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, attachment) - 24usize];
    ["Offset of field: Clay_FloatingElementConfig::pointerCaptureMode"]
        [::std::mem::offset_of!(Clay_FloatingElementConfig, pointerCaptureMode) - 28usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CustomElementConfig {
    pub customData: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_CustomElementConfig"]
        [::std::mem::size_of::<Clay_CustomElementConfig>() - 8usize];
    ["Alignment of Clay_CustomElementConfig"]
        [::std::mem::align_of::<Clay_CustomElementConfig>() - 8usize];
    ["Offset of field: Clay_CustomElementConfig::customData"]
        [::std::mem::offset_of!(Clay_CustomElementConfig, customData) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollElementConfig {
    pub horizontal: bool,
    pub vertical: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ScrollElementConfig"]
        [::std::mem::size_of::<Clay_ScrollElementConfig>() - 2usize];
    ["Alignment of Clay_ScrollElementConfig"]
        [::std::mem::align_of::<Clay_ScrollElementConfig>() - 1usize];
    ["Offset of field: Clay_ScrollElementConfig::horizontal"]
        [::std::mem::offset_of!(Clay_ScrollElementConfig, horizontal) - 0usize];
    ["Offset of field: Clay_ScrollElementConfig::vertical"]
        [::std::mem::offset_of!(Clay_ScrollElementConfig, vertical) - 1usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Border {
    pub width: u32,
    pub color: Clay_Color,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Border"][::std::mem::size_of::<Clay_Border>() - 20usize];
    ["Alignment of Clay_Border"][::std::mem::align_of::<Clay_Border>() - 4usize];
    ["Offset of field: Clay_Border::width"][::std::mem::offset_of!(Clay_Border, width) - 0usize];
    ["Offset of field: Clay_Border::color"][::std::mem::offset_of!(Clay_Border, color) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BorderElementConfig {
    pub left: Clay_Border,
    pub right: Clay_Border,
    pub top: Clay_Border,
    pub bottom: Clay_Border,
    pub betweenChildren: Clay_Border,
    pub cornerRadius: Clay_CornerRadius,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_BorderElementConfig"]
        [::std::mem::size_of::<Clay_BorderElementConfig>() - 116usize];
    ["Alignment of Clay_BorderElementConfig"]
        [::std::mem::align_of::<Clay_BorderElementConfig>() - 4usize];
    ["Offset of field: Clay_BorderElementConfig::left"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, left) - 0usize];
    ["Offset of field: Clay_BorderElementConfig::right"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, right) - 20usize];
    ["Offset of field: Clay_BorderElementConfig::top"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, top) - 40usize];
    ["Offset of field: Clay_BorderElementConfig::bottom"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, bottom) - 60usize];
    ["Offset of field: Clay_BorderElementConfig::betweenChildren"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, betweenChildren) - 80usize];
    ["Offset of field: Clay_BorderElementConfig::cornerRadius"]
        [::std::mem::offset_of!(Clay_BorderElementConfig, cornerRadius) - 100usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_ElementConfigUnion {
    pub rectangleElementConfig: *mut Clay_RectangleElementConfig,
    pub textElementConfig: *mut Clay_TextElementConfig,
    pub imageElementConfig: *mut Clay_ImageElementConfig,
    pub floatingElementConfig: *mut Clay_FloatingElementConfig,
    pub customElementConfig: *mut Clay_CustomElementConfig,
    pub scrollElementConfig: *mut Clay_ScrollElementConfig,
    pub borderElementConfig: *mut Clay_BorderElementConfig,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ElementConfigUnion"][::std::mem::size_of::<Clay_ElementConfigUnion>() - 8usize];
    ["Alignment of Clay_ElementConfigUnion"]
        [::std::mem::align_of::<Clay_ElementConfigUnion>() - 8usize];
    ["Offset of field: Clay_ElementConfigUnion::rectangleElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, rectangleElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::textElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, textElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::imageElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, imageElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::floatingElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, floatingElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::customElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, customElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::scrollElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, scrollElementConfig) - 0usize];
    ["Offset of field: Clay_ElementConfigUnion::borderElementConfig"]
        [::std::mem::offset_of!(Clay_ElementConfigUnion, borderElementConfig) - 0usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_ElementConfig {
    pub type_: Clay__ElementConfigType,
    pub config: Clay_ElementConfigUnion,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ElementConfig"][::std::mem::size_of::<Clay_ElementConfig>() - 16usize];
    ["Alignment of Clay_ElementConfig"][::std::mem::align_of::<Clay_ElementConfig>() - 8usize];
    ["Offset of field: Clay_ElementConfig::type_"]
        [::std::mem::offset_of!(Clay_ElementConfig, type_) - 0usize];
    ["Offset of field: Clay_ElementConfig::config"]
        [::std::mem::offset_of!(Clay_ElementConfig, config) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollContainerData {
    pub scrollPosition: *mut Clay_Vector2,
    pub scrollContainerDimensions: Clay_Dimensions,
    pub contentDimensions: Clay_Dimensions,
    pub config: Clay_ScrollElementConfig,
    pub found: bool,
}
